fix: css issue that was cause a horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,10 @@
  */
 }
 
+
 .App {
     text-align: center;
+    margin: 0 auto; 
 }
 
 .App-logo {
