--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,14 +10,14 @@
 }
 
 .navbar-items-dashboard {
+    margin-top: 1%; 
     background: #fff;
     height: 3rem;
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: center;
     font-size: 1rem;
     position: relative;
-    padding-right: 5%;
     width: 100%;
 }
 
@@ -33,6 +33,7 @@
 }
 
 .nav-menu {
+    margin-top: 2%; 
     display: grid;
     grid-template-columns: repeat(4, auto);
     grid-gap: 2px;
